# CppBaseProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md  notes.md  tasks.py
include/: CMakeLists.txt  LinkedLists.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  LinkedLists.cpp  main.cpp
test/: CMakeLists.txt
